--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -85,7 +85,7 @@ h6 {
 .sticky-nav {
   position: fixed;
   top: 0;
-  z-index: 1000;
+  z-index: 100;
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
@@ -93,6 +93,12 @@ h6 {
   transition: opacity 0.5s ease;
 }
 
-.show-nav {
-  opacity: 1;
+.mnav__close-btn {
+  z-index: 150; /* Adjust this value based on your page's content */
+}
+
+@media (min-width: 960px) {
+  .show-nav {
+    opacity: 1;
+  }
 }
